# chainglogs

./: README.md  pyproject.toml
.github/workflows/: ci.yaml  pypi-publish.yaml
src/chainglogs/: __init__.py  ai.py  changelog_updater.py  cli.py  vcs.py
