[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chainglogs"
version = "0.1.0"
description = "A CLI tool to generate ROS package changelogs using Gemini AI"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    { name = "Expert Python Programmer" },
]
dependencies = [
    "catkin_pkg",
    "google-genai",
    "keyring",
]

[project.scripts]
chainglogs = "chainglogs.cli:main"

[tool.hatch.build.targets.wheel]
# Tells hatchling that our package 'chainglogs' is inside the 'src' directory
packages = ["src/chainglogs"]

[tool.hatch.build.targets.wheel.sources]
# Removes the 'src' prefix from the distribution so imports look like 'import chainglogs'
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/LICENSE",
    "/README.md",
]
