[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chainglog"
version = "0.1.0"
description = "Generate ROS package changelogs using Gemini."
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    { name = "Expert Python Programmer" },
]
dependencies = [
    "catkin_pkg",
    "google-genai",
    "keyring",
]

[project.scripts]
chainglog = "chainglog.cli:main"

[tool.hatch.build.targets.wheel]
# Tells hatchling that our package 'chainglog' is inside the 'src' directory
packages = ["src/chainglog"]

[tool.hatch.build.targets.wheel.sources]
# Removes the 'src' prefix from the distribution so imports look like 'import chainglog'
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/LICENSE",
    "/README.md",
]
